# rbsky

./: Cargo.toml
src/: main.rs
src/lib/: client.rs  lib.rs  xrpc.rs
src/lib/client/: com.rs  error.rs
src/lib/client/com/: atproto.rs
src/lib/client/com/atproto/: account.rs  session.rs
src/lib/xrpc/: error.rs
src/lib/xrpc/com/atproto/: session.rs
