[package]
name = "rbsky"
version = "0.1.0"
edition = "2021"
authors = ["me <me@gmail.com>"]

[lib]
name = "rbsky"
path = "src/lib/lib.rs"

[[bin]]
name = "bsky-cli"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
